--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,68 +1,84 @@
-* {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin: 0;
-    padding: 0;
+body {
+    background-color: #ccc;
 }
-
-div.viewport {
-    padding-top: 100px;
-}
-
+  
 header * {
-    display: inline-block;
+    display: flex;
     color: white;
-    margin-left: 5px;
     text-decoration: none;
-
 }
 
-header {
-    background-color: green;
-    position: fixed;
+nav {
+    background-color: #DABD84 ;
+    position: flex;
     width: 100%;
     padding: 20px;
+    justify-content: space-between;
 }
 
-#about, #experience, #applications, #contact {
-    padding: 10px;
+nav ul li {
+    padding-left: 15px;
 }
 
-.footer {
-    background-color: green;
-    color: white;
-    padding: 10px;
+div.container {
+    display: flex;
+}
+
+aside {
+    color: #DABD84;
+    background-color: #191919;
+    border: 1px solid #ffffff ;
+    padding: 12px;
+    min-width: 225px;
     text-align: center;
 }
 
 img {
-    height: 100px;
     width: 200px;
+    height: 200px;
+    padding-top: 10px;
 }
 
-.experience-container {
+main {
+    padding: 12px;
+    justify-content: center;
     display: flex;
+    flex-wrap: wrap;
 }
 
 .box {
     display: flex;
-    flex-basis: 100px;
-    flex: 1;
+    justify-content: center;
+
 }
 
-@media only screen and (min-width: 950px) {
+.one {
+    flex: 2 1 300px;
+    border: 5px solid red;
+}
+
+footer {
+    background-color: #DABD84 ;
+    color: FFF;
+    display: flex;
+    justify-content: center;
+}
+
+@media only screen and (min-width: 1200px) {
     body {
         background-color: grey;
     }
 }
 
-@media only screen and (max-width: 950px) {
+@media only screen and (max-width: 1200px) {
     body {
         background-color: pink;
     }
 }
 
-@media only screen and (max-width: 650px) {
+@media only screen and (max-width: 600px) {
     body {
         background-color: gold;
+      
     }
 }
